# csv-type

./: .gitignore  pyproject.toml
src/: detect_csv_url.py  test_detect_csv_url.py
src/csvtype/: detect_csv_url.py
src/tests/: test_csv_url.py
src/url_content_type_services/: url_content_type_services.py
