[tool.poetry]
name = "csv-type"
version = "0.1.0"
description = ""
authors = ["sarrabah <sarrabenarbia1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
